# mindmap

./: .gitignore  CMakeLists.txt  LICENSE  README.md
icon/: app.aps  app.rc
src/: main.cpp  main.h  mindmap.cpp  mindmap.h  mindmap_command.h  mindmap_graph.h  mindmap_graph_layout.h  mindmap_state_machine.h
templates/: content.txt  html.txt  imgui.ini  lunasvg.txt  output.json  script.txt  svg.txt  svg_fat.txt
